--- a/src/helpers.css
+++ b/src/helpers.css
@@ -1,9 +1,13 @@
-.spacer-sm {
-    height: 50px;
+.container {
+  width: 1920px;
+  margin: 0 auto;
 }
 
 @media only screen and (max-width: 1920px) {
-    .spacer-sm {
-        height: 30px;
-    }
+  .spacer-sm {
+    height: 30px;
+  }
+  .container {
+    width: 1140px;
+  }
 }
