--- a/src/components/Thumbnail.module.css
+++ b/src/components/Thumbnail.module.css
@@ -65,6 +65,8 @@
 
 .circle {
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
 }
 
 .pic {
@@ -76,9 +78,9 @@
 
 .picCard {
   border-radius: 50%;
-  border: 2.5px solid #e0ef10;
-  width: 250px;
-  height: 250px;
+  border: 3px solid #e0ef10;
+  width: 300px;
+  height: 300px;
 }
 
 @media only screen and (max-width: 1920px) {
@@ -88,7 +90,7 @@
   }
 
   .picCard {
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
   }
 }
