--- a/src/components/ChiSono.module.css
+++ b/src/components/ChiSono.module.css
@@ -35,13 +35,12 @@
   position: absolute;
   top: 135px;
   left: -50px;
-  /* animation: heightAnimation 2s ease-in-out 0.2s 1 normal forwards; */
 }
 
 
 .paragraph {
   font-size: 1.5rem;
-  line-height: 50px;
+  line-height: 2.5rem;
   width: 70%;
   font-weight: 300;
   letter-spacing: 3px;
@@ -97,26 +96,16 @@
 
 .linkedin {
   align-self: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
-/* @keyframes heightAnimation {
-  from {
-    height: 0;
-    opacity: 0;
-  }
-
-  to {
-    height: 430px;
-    opacity: 1;
-  }
-} */
 
 @media only screen and (max-width: 1920px) {
+
   .paragraph {
     font-size: 1rem;
-    width: 80%;
-    line-height: 40px;
+    width: 70%;
+    line-height: 2rem;
   }
 
   .title {
@@ -162,16 +151,4 @@
   .text {
     margin-bottom: 0px;
   }
-
-  /* @keyframes heightAnimation {
-    from {
-      height: 0;
-      opacity: 0;
-    }
-  
-    to {
-      height: 330px;
-      opacity: 1;
-    }
-  } */
 }
