--- a/src/components/SmoothScroll/SmoothScroll.module.css
+++ b/src/components/SmoothScroll/SmoothScroll.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  pointer-events: none;
+  /* pointer-events: none; */
   background-color: #0a0a0a;
   background-size: cover;
   background-attachment: fixed;
