--- a/src/App.module.css
+++ b/src/App.module.css
@@ -22,6 +22,23 @@ strong {
   color: #e0ef10;
 }
 
+
+
+.skill {
+  display: flex;
+  align-items: center;
+  
+  width: 100vw;
+  height: 100vh;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
 @media only screen and (max-width: 1920px) {
   html {
     font-size: 18px;
