--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -7,8 +7,11 @@
   opacity: 0;
   position: fixed;
   z-index: 9999;
-  right: 150px;
-  top: 100px;
+  right: 12%;
+  top: 50%;
+  height: 800px;
+  justify-content: space-between;
+  margin-top: -400px;
 }
 
 .descContainer {
@@ -52,18 +55,23 @@
   justify-content: center;
 }
 
-@media only screen and (max-width: 1920px) {  
-    svg {
-      width: 20px !important;
-    }
-  
-    .linkedin {
-      width: 40px !important;
-    }
-  
-    .infoContainer {
-      width: 80%;
-    }
-  
+@media only screen and (max-width: 1920px) {
+  svg {
+    width: 20px !important;
   }
-  
+
+  .linkedin {
+    width: 40px !important;
+  }
+
+  .infoContainer {
+    width: 80%;
+  }
+
+  .card {
+    top: 50%;
+    height: 550px;
+    justify-content: space-between;
+    margin-top: -275px;
+  }
+}
