--- a/src/components/ChiSono.module.css
+++ b/src/components/ChiSono.module.css
@@ -7,16 +7,16 @@
 
 .container {
   display: flex;
+  overflow: hidden;
 }
 
 .text {
-  margin-left: 50px;
   align-self: center;
   margin-bottom: 100px;
 }
 
 .line1 {
-    margin-left: -70px;
+    margin-left: 70px;
 }
 
 .title {
@@ -31,7 +31,7 @@
   background-color: #e0ef10;
   position: absolute;
   top: 135px;
-  left: -50px;
+  left: 0px;
 }
 
 
@@ -41,6 +41,7 @@
   width: 55%;
   font-weight: 300;
   letter-spacing: 3px;
+  margin-left: 70px;
 }
 
 .paragraph strong {
@@ -55,7 +56,7 @@
     background-color: #e0ef10;
     position: absolute;
     top: 93px;
-    left: -45px;
+    left: 25px;
   }
 
 
