--- a/src/components/SkillCard.module.css
+++ b/src/components/SkillCard.module.css
@@ -3,4 +3,26 @@
     width: 23%;
     height: 45%;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon{
+    width: 7rem;
+}
+
+.container {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 85%;
+    justify-content: space-around;
+}
+
+.text {
+    font-size: 1.2rem;
+    font-weight: 600;
 }
