--- a/src/components/SkillList.module.css
+++ b/src/components/SkillList.module.css
@@ -1,9 +1,8 @@
 .skillContainer {
-    display: flex;
-    width: 60%;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    height: 400px;
-    align-content: space-around;
+  display: flex;
+  width: 50%;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  height: 400px;
+  align-content: space-evenly;
 }
-
