--- a/src/components/Skill.module.css
+++ b/src/components/Skill.module.css
@@ -35,7 +35,7 @@
 }
 
 .switch {
-  width: 15%;
+  width: 12.5%;
   height: 40px;
   background-color: #332f2e;
   display: flex;
@@ -61,14 +61,14 @@
   position: absolute;
   top: 23px;
   left: 30px;
-  margin-top: -10px;
+  margin-top: -0.65rem;
 }
 
 .design {
   position: absolute;
   top: 23px;
   right: 21px;
-  margin-top: -10px;
+  margin-top: -0.65rem;
 }
 
 .switch h4 {
