--- a/src/components/SkillList.module.css
+++ b/src/components/SkillList.module.css
@@ -3,6 +3,12 @@
   width: 50%;
   justify-content: space-between;
   flex-wrap: wrap;
-  height: 400px;
+  height: 550px;
   align-content: space-evenly;
+}
+
+@media only screen and (max-width: 1920px) {
+  .skillContainer {
+    height: 400px;
+  }
 }
