--- a/src/components/ChiSono.module.css
+++ b/src/components/ChiSono.module.css
@@ -16,7 +16,7 @@
 }
 
 .line1 {
-    margin-left: 70px;
+  margin-left: 90px;
 }
 
 .title {
@@ -31,9 +31,8 @@
   background-color: #e0ef10;
   position: absolute;
   top: 135px;
-  left: 0px;
+  left: 25px;
 }
-
 
 .paragraph {
   font-size: 1.5rem;
@@ -41,16 +40,14 @@
   width: 55%;
   font-weight: 300;
   letter-spacing: 3px;
-  margin-left: 70px;
+  margin-left: 90px;
 }
 
 .paragraph strong {
   font-weight: 600;
 }
 
-
 @media only screen and (max-width: 1920px) {
-
   .line {
     content: "";
     background-color: #e0ef10;
@@ -59,6 +56,14 @@
     left: 25px;
   }
 
+  .line1 {
+    margin-left: 70px;
+  }
+
+  .paragraph {
+    margin-left: 70px;
+    width: 50%;
+  }
 
   svg {
     width: 20px !important;
