--- a/src/components/Skill.module.css
+++ b/src/components/Skill.module.css
@@ -46,7 +46,7 @@
   position: relative;
 }
 
-.switch[data-isOn="true"] {
+.switch[data-ison="true"] {
   justify-content: flex-end;
 }
 
@@ -79,14 +79,14 @@
 @media only screen and (max-width: 1920px) {
   .code {
     position: absolute;
-    top: 22px;
+    top: 23px;
     left: 25px;
     margin-top: -0.65rem;
   }
   
   .design {
     position: absolute;
-    top: 22px;
+    top: 23px;
     right: 18px;
     margin-top: -0.65rem;
   }
