--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,16 +3,20 @@
 html {
   font-size: 20px;
   font-family: "Montserrat", "sans-serif";
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   color: #f1fffa;
 }
 
 .main {
   height: 100%;
   width: 100%;
-  overflow: auto;
+  /* overflow: auto; */
   background-color: #0a0a0a;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+}
+
+.styckyContainer {
+  background-color: #0a0a0a;
 }
 
 /* .main::after {
