--- a/src/components/Homepage.module.css
+++ b/src/components/Homepage.module.css
@@ -6,6 +6,12 @@
   justify-content: center;
 }
 
+.container {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+}
+
 /* .main::after {
   content: "";
   background-image: url("../img/8.svg");
@@ -80,6 +86,10 @@
 @media only screen and (max-width: 1920px) {
   .header h1 {
     font-size: 3rem;
+  }
+
+  .container {
+    width: 1280px !important;
   }
 }
 
