--- a/src/helpers.css
+++ b/src/helpers.css
@@ -3,16 +3,16 @@
   margin: 0 auto;
 }
 
-.prova {
-  position: fixed;
-  border: 2px solid red;
-  height: 50px;
-  width: 50px;
-  z-index:9999;
+.body {
+  overflow-x: hidden;
+}
+
+.clear {
+  clear: both;
 }
 
 @media only screen and (max-width: 1920px) {
   .container {
-    width: 1400px;
+    width: 1280px;
   }
 }
